Fetch Todos at Home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,6 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-<div class="container">
+<div style="padding: 0 5%;">
   <router-outlet></router-outlet>
 </div>
