Fix input label

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <br />
 <mat-form-field style="width: 100%">
-  <mat-label>Favorite food</mat-label>
+  <mat-label>Search TODO</mat-label>
   <input
     matInput
     placeholder="Search TODO"
